; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_roff.c_roff_state_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_roff.c_roff_state_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.roff_man = type { i32, i32, i32, i32, i64, i32*, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@SEC_NONE = common dso_local global i32 0, align 4
@ROFF_NEXT_CHILD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"nS\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @roff_state_reset(%struct.roff_man* %0) #0 {
  %2 = alloca %struct.roff_man*, align 8
  store %struct.roff_man* %0, %struct.roff_man** %2, align 8
  %3 = load %struct.roff_man*, %struct.roff_man** %2, align 8
  %4 = getelementptr inbounds %struct.roff_man, %struct.roff_man* %3, i32 0, i32 6
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = load %struct.roff_man*, %struct.roff_man** %2, align 8
  %8 = getelementptr inbounds %struct.roff_man, %struct.roff_man* %7, i32 0, i32 7
  store i32 %6, i32* %8, align 4
  %9 = load %struct.roff_man*, %struct.roff_man** %2, align 8
  %10 = getelementptr inbounds %struct.roff_man, %struct.roff_man* %9, i32 0, i32 5
  store i32* null, i32** %10, align 8
  %11 = load %struct.roff_man*, %struct.roff_man** %2, align 8
  %12 = getelementptr inbounds %struct.roff_man, %struct.roff_man* %11, i32 0, i32 4
  store i64 0, i64* %12, align 8
  %13 = load i32, i32* @SEC_NONE, align 4
  %14 = load %struct.roff_man*, %struct.roff_man** %2, align 8
  %15 = getelementptr inbounds %struct.roff_man, %struct.roff_man* %14, i32 0, i32 2
  store i32 %13, i32* %15, align 8
  %16 = load %struct.roff_man*, %struct.roff_man** %2, align 8
  %17 = getelementptr inbounds %struct.roff_man, %struct.roff_man* %16, i32 0, i32 3
  store i32 %13, i32* %17, align 4
  %18 = load i32, i32* @ROFF_NEXT_CHILD, align 4
  %19 = load %struct.roff_man*, %struct.roff_man** %2, align 8
  %20 = getelementptr inbounds %struct.roff_man, %struct.roff_man* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load %struct.roff_man*, %struct.roff_man** %2, align 8
  %22 = getelementptr inbounds %struct.roff_man, %struct.roff_man* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @roff_setreg(i32 %23, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 0, i8 signext 61)
  ret void
}

declare dso_local i32 @roff_setreg(i32, i8*, i32, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
